--- a/ProjectSite_3/css/customCss.css
+++ b/ProjectSite_3/css/customCss.css
@@ -1,5 +1,5 @@
 h1 {
-    color: #FFFFFF;
+    color: #fff;
     padding: 50px;
     font-size: 55px;
 }
@@ -40,8 +40,20 @@ footer p {
     height: 20px;
     background-color: #343436;
     margin-top: -40px;
+    margin-bottom: 15px;
     padding: 0;
 }
 div p {
     text-indent: 25px;
+}
+
+.pTitle {
+    color: #fff;
+    font-size: 30px;
+    margin-top: -55px;
+    padding-bottom: 40px;
+}
+
+. glyphicon-chevron-left, glyphicon-chevron-right{
+    color: white;
 }
