--- a/04_Project_Portfolio/css/mycss.css
+++ b/04_Project_Portfolio/css/mycss.css
@@ -1,34 +1,184 @@
 body {
     /* Top nav bar fixed */
-    padding-top: 60px;
+    padding-top: 70px;
     /*End*/
-    background-color: black;
+    background-color: #F5F5F5;
+    min-width: 295px;
+}
+h1 {
+    margin-top: 0;
+    font-size: 22pt;
+}
+.myBrand {
+    padding-top: 15px;
+    display: inline-block;
+    text-align: center;
+    background-color: orange;
+    height: 50px;
+    width: 50px;
+}
+.had {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    width: 100%;
+    height: 35px;
+    background: #35879A;
+}
+hr {
+    border-color: #35879A;
+    size: 5px;
+}
+.secLeft {
+    padding-top: 10px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
+    background-color: #42A8C0;
+    color: #FAFAFA;
+    text-align: center;
+}
+.greetings {
+    text-align: left;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+li {
+}
+li h3 i {
+    color: #235A67;
+}
+li h3 {
+    color: #235A67;
 }
 
-.myPhoto{
-    max-width: 240px;
+li:nth-child(even) {
+    padding-top: 5px;
+    padding-bottom: 30px;
+    padding-left: 15px;
 }
 
-.secLeft{ 
+li i {
+  font-size: 36px;
 }
 
- .contactInform ul{
+
+
+
+.contactInform ul {
+    text-align: left;
     list-style: none;
-     padding: 0;
-     
+    padding: 0;
+}
+i {} .secRight {} .redLine {
+    background-color: #94D7E6;
+    padding: 0;
+    margin: 0;
+    height: 35px;
+}
+.mSquareR {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background-color: #35879A;
+    float: right;
+}
+.mSquareL {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background-color: #35879A;
+}
+p {
+    background-color: white;
+    padding-top: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 10px;
+    text-indent: 15px;
+}
+.downArrow {
+    margin-left: 5%;
+    margin-right: 5%;
+    background-color: #94D7E6;
+    width: 90%;
+    height: 20px;
+    text-align: center;
+}
+h2 {
+    font-size: 18pt;
+}
+h3 {
+    font-size: 16pt;
+    color: #FAFAFA;
+    margin: 0;
+    padding-left: 10px;
+    display: inline-block;
+}
+i {
+    color: #FAFAFA;
 }
 
-.secRight{
-    
+.social{
+    display: inline-block;
+    margin: 0;
+    font-size: 30px;
+    padding: 10px;
 }
-
 
 footer {
+    text-align: center;
+    background-color: #235A67;
     margin-top: 30px;
-    background-color: black;
     width: 100%;
     height: 100px;
-   
+}
+footer p {
+    padding-top: 40px;
+    color: white;
+    background-color: #235A67;
+}
+p em {
+    color: orange;
+}
+.console {
+    color: white;
+    -webkit-animation-name: console;
+    animation-name: console;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+}
+/* The animation code */
+
+/* Chrome, Safari, Opera */
+
+@-webkit-keyframes console {
+    from {
+        color: white;
+    }
+    to {
+        color: #42A8C0;
+    }
+}
+/* Standard syntax */
+
+@keyframes console {
+    from {
+        color: white;
+    }
+    to {
+        color: #42A8C0;
+    }
+}
+[class^="icon-"],
+[class*=" icon-"] {
+    display: inline-block;
+    width: 100%;
 }
 /*Restyle bootstrap css*/
 
