--- a/04_Project_Portfolio/css/mycss.css
+++ b/04_Project_Portfolio/css/mycss.css
@@ -1,9 +1,73 @@
 body {
     /* Top nav bar fixed */
-    padding-top: 70px;
     /*End*/
     background-color: #F5F5F5;
     min-width: 295px;
+}
+.myNav {
+    z-index: 1;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 20px;
+}
+/* Navbar dropdown */
+
+.dropbtn {
+    background-color: orange;
+    opacity: 0.8;
+    height: 50px;
+    width: 50px;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+    float: right;
+}
+.dropdown-content {
+    z-index: 1;
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 260px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown:hover .dropbtn {
+    opacity: 1;
+    box-shadow: 0 0 6px rgba(35, 173, 255, 1);
+}
+/* End */
+
+.currentPosition {
+    background-color: white;
+    float: right;
+    height: 50px;
+    width: 210px;
+    opacity: 0.5;
+}
+.currentPosition p {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    padding-top: 15px;
+    cursor: default;
 }
 h1 {
     margin-top: 0;
@@ -16,6 +80,11 @@ h1 {
     background-color: orange;
     height: 50px;
     width: 50px;
+    opacity: 0.8;
+}
+.myBrand:hover {
+    opacity: 1;
+    box-shadow: 0 0 6px rgba(35, 173, 255, 1);
 }
 .had {
     margin-bottom: 0;
@@ -174,6 +243,9 @@ footer p {
     height: 100%;
     float: right;
 }
+#upArrow:hover {
+    box-shadow: 0 0 6px rgba(35, 173, 255, 1);
+}
 @media screen and (max-width: 375px) {
     #upArrow {
         display: none;
@@ -236,41 +308,4 @@ p em {
 }
 /*Restyle bootstrap css*/
 
-@media (max-width: 2000px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-left,
-    .navbar-right {
-        float: none !important;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin-top: 7.5px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in {
-        display: block !important;
-    }
-}
 /*End*/
