--- a/04_Project_Portfolio/css/mycss.css
+++ b/04_Project_Portfolio/css/mycss.css
@@ -3,18 +3,23 @@ body {
     /*End*/
     background-color: #F5F5F5;
     min-width: 295px;
+    padding-top: 75px;
 }
 .myNav {
+    background-color: #FAFAFA;
+    opacity: 1;
     z-index: 1;
     padding: 0;
     margin: 0;
-    margin-bottom: 20px;
+    position: fixed;
+    width: 100%;
+    margin-top: -75px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
 }
 /* Navbar dropdown */
 
 .dropbtn {
     background-color: orange;
-    opacity: 0.8;
     height: 50px;
     width: 50px;
     color: white;
@@ -60,7 +65,6 @@ body {
     float: right;
     height: 50px;
     width: 210px;
-    opacity: 0.5;
 }
 .currentPosition p {
     margin: 0;
@@ -80,7 +84,6 @@ h1 {
     background-color: orange;
     height: 50px;
     width: 50px;
-    opacity: 0.8;
 }
 .myBrand:hover {
     opacity: 1;
