--- a/04_Project_Portfolio/css/mycss.css
+++ b/04_Project_Portfolio/css/mycss.css
@@ -41,7 +41,7 @@ body {
     position: absolute;
     right: 0;
     background-color: #f9f9f9;
-    min-width: 260px;
+    min-width: 270px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 .dropdown-content a {
@@ -66,7 +66,8 @@ body {
     background-color: white;
     float: right;
     height: 50px;
-    width: 210px;
+    width: 220px;
+    padding-right: 10px;
 }
 .currentPosition p {
     margin: 0;
@@ -314,6 +315,32 @@ footer p {
     width: 60px;
     height: 100%;
     float: right;
+}
+.currentPositionAngleRiht {
+    float: left;
+    color: orange;
+    font-size: 20px;
+}
+#s1 {
+    display: inline-block;
+}
+#s2 {
+    display: none;
+}
+#s3 {
+    display: none;
+}
+#s4 {
+    display: none;
+}
+#s5 {
+    display: none;
+}
+#s6 {
+    display: none;
+}
+#s7 {
+    display: none;
 }
 #upArrow:hover {
     box-shadow: 0 0 6px rgba(35, 173, 255, 1);
