--- a/04_Project_Portfolio/css/mycss.css
+++ b/04_Project_Portfolio/css/mycss.css
@@ -250,8 +250,8 @@ h4 i {
 p {
     background-color: white;
     padding-top: 10px;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 6%;
+    padding-right: 6%;
     padding-bottom: 10px;
     text-indent: 15px;
 }
@@ -317,7 +317,7 @@ footer p {
     float: right;
 }
 .currentPositionAngleRiht {
-    float: left;
+    float: right;
     color: orange;
     font-size: 20px;
 }
@@ -342,6 +342,7 @@ footer p {
 #s7 {
     display: none;
 }
+
 #upArrow:hover {
     box-shadow: 0 0 6px rgba(35, 173, 255, 1);
 }
@@ -421,7 +422,6 @@ footer p {
         font-size: 1em;
     }
 }
-
 
 p em {
     color: orange;
