--- a/04_Project_Portfolio/css/mycss.css
+++ b/04_Project_Portfolio/css/mycss.css
@@ -6,7 +6,13 @@ body {
     padding-top: 75px;
     font-family: Helvetica, Arial, sans-serif;
     font-style: normal;
+    color:  #235A67;
 }
+
+article {
+    background: white;
+}
+
 .myNav {
     background-color: #FAFAFA;
     opacity: 1;
@@ -135,9 +141,7 @@ span.glyphicon.glyphicon-save {
 li h2 {
     color: #235A67;
 }
-li:nth-child(even) {
-    padding-bottom: 10px;
-    padding-left: 20px;
+
 }
 li i {
     padding-right: 10px;
@@ -154,7 +158,7 @@ li i {
 .contactInf span {
     padding: 0;
     padding-right: 10px;
-    font-size: 25px;
+    font-size: 20px;
 }
 .contactInf {
     display: block;
@@ -251,10 +255,11 @@ p {
     background-color: white;
     padding-top: 10px;
     padding-left: 6%;
-    padding-right: 6%;
+    padding-right: 7%;
     padding-bottom: 10px;
     text-indent: 15px;
 }
+
 .downArrow {
     margin-left: 5%;
     margin-right: 5%;
@@ -278,6 +283,8 @@ h3 {
     margin: 0;
     padding-top: 5px;
     padding-left: 45px;
+    word-break: keep-all;
+    
 }
 i {
     color: #FAFAFA;
@@ -317,10 +324,32 @@ footer p {
     float: right;
 }
 .currentPositionAngleRiht {
-    float: right;
+    float: left;
     color: orange;
     font-size: 20px;
 }
+
+article p {
+    line-height: 2.4;
+    letter-spacing: 0.4px;
+}
+
+article ul {
+    line-height: 2.4;
+    letter-spacing: 0.4px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+article hr{
+    padding: 0;
+    width: 60%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
 #s1 {
     display: inline-block;
 }
@@ -342,6 +371,8 @@ footer p {
 #s7 {
     display: none;
 }
+
+
 
 #upArrow:hover {
     box-shadow: 0 0 6px rgba(35, 173, 255, 1);
@@ -422,7 +453,6 @@ footer p {
         font-size: 1em;
     }
 }
-
 p em {
     color: orange;
 }
@@ -465,3 +495,42 @@ p em {
 /*Restyle bootstrap css*/
 
 /*End*/
+
+
+div.img:hover {
+    border: 1px solid #235A67;
+}
+
+div.img img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.resp {
+    padding: 0 6px;
+    float: left;
+    width: 49.99999%;
+    margin-bottom: 5%;
+}
+
+
+@media only screen and (max-width: 600px){
+    .resp {
+        width: 100%;
+    }
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
