--- a/02_Project_InsightArt/css/MyCss.css
+++ b/02_Project_InsightArt/css/MyCss.css
@@ -1,200 +1,162 @@
 @charset "utf-8";
+
 /* CSS Document */
+
 body {
-	background:url(../img/subtlenet2.png); 
-	font-family:Tahoma, Arial, sans-serif; 
-	font-size:16px; 
-	color:#4D4D4D; 
-	margin:0; 
-	padding:0;
-	z-index:-1000;
-	width:100%;
-	height:100%;
+    background: url(../img/subtlenet2.png);
+    font-family: Tahoma, Arial, sans-serif;
+    font-size: 16px;
+    color: #4D4D4D;
+    margin: 0;
+    padding: 0;
+    z-index: -1000;
+    width: 100%;
+    height: 100%;
 }
-
 .wrap {
-	position:relative;	
+    position: relative;
 }
-
-a img { border:0;}
-
-
-
-.header { 
-	background:url(../img/f1.png);
-	width:100%;
-	height:auto;
-	z-index:-999;
-	
+a img {
+    border: 0;
 }
-
+.header {
+    background: url(../img/f1.png);
+    width: 100%;
+    height: auto;
+    z-index: -999;
+}
 .logo {
-	background:url(../img/f3.png);
-	width:220px;
-	height:200px;
+    background: url(../img/f3.png);
+    width: 220px;
+    height: 200px;
 }
-
 .logo img {
-	margin:2% 3% 2% 3%;	
+    margin: 2% 3% 2% 3%;
 }
-
-.language {
-
-}
-
 .search {
-	margin-left:80%
+    margin-left: 80%
 }
-
-
 .line1 {
-	background-color:#FFF;
-	opacity:0.4;
-	width:100%;
-	height:10px;	
+    background-color: #FFF;
+    opacity: 0.4;
+    width: 100%;
+    height: 10px;
 }
-
 .slider_block {
-	width:100%;
-	height:300px;
-	background:#9ab9ba;
-	margin-top:5%;
-	opacity:0.6;
-	position:relative;
+    width: 100%;
+    height: 300px;
+    background: #9ab9ba;
+    margin-top: 5%;
+    opacity: 0.6;
+    position: relative;
 }
-
 .line2 {
-	background-color:#FFF;
-	opacity:0.4; 
-	width:100%;
-	height:10px;	
+    background-color: #FFF;
+    opacity: 0.4;
+    width: 100%;
+    height: 10px;
 }
-
 .menu_cart_block {
-	width:100%; 
-	margin:2% 5% 2% 5%;
+    width: 100%;
+    margin: 2% 5% 2% 5%;
 }
-
-
 .menu_item1 {
-	width:200px;
-	height:200px;
-	margin:3% 3% 3% 3%;
-	float:left;
+    width: 200px;
+    height: 200px;
+    margin: 3% 3% 3% 3%;
+    float: left;
 }
-
 .menu_item1:hover {
-	background-image:url(../img/fondraft.png);
-	}
-
+    background-image: url(../img/fondraft.png);
+}
 .menu_item2 {
-	width:200px;
-	height:200px;
-	margin:3% 3% 3% 3%;
-	float:left;
+    width: 200px;
+    height: 200px;
+    margin: 3% 3% 3% 3%;
+    float: left;
 }
-
 .menu_item2:hover {
-	background-image:url(../img/fonfoto.png);
-	}
-
+    background-image: url(../img/fonfoto.png);
+}
 .menu_item3 {
-	width:200px;
-	height:200px;
-	margin:3% 3% 3% 3%;
-	float:left;
+    width: 200px;
+    height: 200px;
+    margin: 3% 3% 3% 3%;
+    float: left;
 }
-
 .menu_item3:hover {
-	background-image:url(../img/fonwind.png);
-	}
-
+    background-image: url(../img/fonwind.png);
+}
 .menu_item4 {
-	width:200px;
-	height:200px;
-	margin:3% 3% 3% 3%;
-	float:left;
+    width: 200px;
+    height: 200px;
+    margin: 3% 3% 3% 3%;
+    float: left;
 }
-
 .menu_item4:hover {
-	background-image:url(../img/fonbag.png);
-	}
-
+    background-image: url(../img/fonbag.png);
+}
 .menu_item5 {
-	width:200px;
-	height:200px;
-	margin:3% 3% 3% 3%;
-	float:left;
+    width: 200px;
+    height: 200px;
+    margin: 3% 3% 3% 3%;
+    float: left;
 }
-
 .menu_item5:hover {
-	background-image:url(../img/fonspeaker.png);
-	}
-
+    background-image: url(../img/fonspeaker.png);
+}
 .menu_item6 {
-	width:200px;
-	height:200px;
-	margin:3% 3% 3% 3%;
-	float:left;
+    width: 200px;
+    height: 200px;
+    margin: 3% 3% 3% 3%;
+    float: left;
 }
-
 .menu_item6:hover {
-	background-image:url(../img/fonruler_pencil.png);
-	}
-
+    background-image: url(../img/fonruler_pencil.png);
+}
 .menu_item7 {
-	width:200px;
-	height:200px;
-	margin:3% 3% 3% 3%;
-	float:left;
+    width: 200px;
+    height: 200px;
+    margin: 3% 3% 3% 3%;
+    float: left;
 }
-
 .menu_item7:hover {
-	background-image:url(../img/fonlightbulb.png);
-	}
-
+    background-image: url(../img/fonlightbulb.png);
+}
 .menu_item8 {
-	width:200px;
-	height:200px;
-	margin:3% 3% 3% 3%;
-	float:left;
+    width: 200px;
+    height: 200px;
+    margin: 3% 3% 3% 3%;
+    float: left;
 }
-
 .menu_item8:hover {
-	background-image:url(../img/fonmail.png);
-	}
-
-.line3 { 
-	background-color:#FFF;
-	opacity:0.4; 
-	width:100%;
-	height:10px;
-	clear: left;	
+    background-image: url(../img/fonmail.png);
 }
-
+.line3 {
+    background-color: #FFF;
+    opacity: 0.4;
+    width: 100%;
+    height: 10px;
+    clear: left;
+}
 .footer_fon ul li {
-	float:right;
-	display:block;
-	list-style:none;
-	margin:1%;
+    float: right;
+    display: block;
+    list-style: none;
+    margin: 1%;
 }
-
 .footer_fon ul {
-	margin:0;
-	padding:0;	
+    margin: 0;
+    padding: 0;
 }
-
 .footer_fon {
-	background:url(../img/f1.png);
-	width:100%;
-	height:100px;
+    background: url(../img/f1.png);
+    width: 100%;
+    height: 100px;
 }
-
-.edgeLoad-EDGE-182604785 { 
-	visibility:hidden; 
-	
+.edgeLoad-EDGE-182604785 {
+    visibility: hidden;
 }
-
-.edgeLoad-EDGE-126614748 { 
-	visibility:hidden; 
+.edgeLoad-EDGE-126614748 {
+    visibility: hidden;
 }
