--- a/Project_LocalWeather/mainCSS.css
+++ b/Project_LocalWeather/mainCSS.css
@@ -2,6 +2,32 @@ body {
     background-color: grey;
 }
 
+div { 
+    text-align: center;
+}
+
 .divider {
     height: 35px;
+}
+
+#arrowLeft {
+    margin-top: 35%;
+    height: 150px;
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+#arrowRight{
+    margin-top: 35%;
+    height: 150px;
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+#arrowRight:hover {
+    opacity: 1;
+}
+
+#arrowLeft:hover {
+    opacity: 1;
 }
