--- a/css/mycss.css
+++ b/css/mycss.css
@@ -202,7 +202,7 @@ ul.skills ul li:last-child {
 .imgWall img {
     margin: 2%;
     height: 70px;
-    width: 70px;
+    width: auto;
     opacity: 0.8;
 }
 .imgWall img:hover {
