--- a/css/mycss.css
+++ b/css/mycss.css
@@ -201,7 +201,7 @@ ul.skills ul li:last-child {
 }
 .imgWall img {
     margin: 2%;
-    height: 70px;
+    height: auto;
     opacity: 0.8;
 }
 .imgWall img:hover {
